--- a/start.html
+++ b/start.html
@@ -9,6 +9,6 @@
 <body>
     <h1>My file is not index.html file</h1>
     <h3>New destination</h3>
-    
+    <img src="Capture2.PNG" alt="">
 </body>
 </html>
