--- a/start.html
+++ b/start.html
@@ -9,6 +9,11 @@
 <body>
     <h1>My file is not index.html file</h1>
     <h3>New destination</h3>
+    <div>
+        <h3>New blog</h3>
+        <h5>look,i can write a blog</h5>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio deleniti ipsam omnis modi? Vero iure alias quis corrupti, adipisci voluptate numquam saepe. Quas dolorum excepturi repellendus labore nisi assumenda. Fuga adipisci nemo libero beatae sit? Eum consequuntur blanditiis voluptatem impedit!</p>
+    </div>
     <img src="Capture2.PNG" alt="">
 </body>
 </html>
